[gd_scene load_steps=9 format=3 uid="uid://bfw2fydvlmuqa"]

[ext_resource type="Script" uid="uid://elf3bnr3nlw0" path="res://Scenes/AbilityUI/ability_slot.gd" id="1_63x3o"]
[ext_resource type="Theme" uid="uid://bxj3jchl1trm8" path="res://Assets/Themes/default.tres" id="2_7xwvf"]
[ext_resource type="Script" uid="uid://bodbr4heo4ugo" path="res://Scenes/AbilityUI/ability_state_machine.gd" id="3_7xwvf"]
[ext_resource type="Script" uid="uid://8o7gecn47306" path="res://Scenes/AbilityUI/ability_base_state.gd" id="4_f4uar"]
[ext_resource type="Script" uid="uid://ta47fxr5gldd" path="res://Scenes/AbilityUI/ability_clicked_state.gd" id="5_othpb"]
[ext_resource type="Script" uid="uid://ugvo2ri73wwy" path="res://Scenes/AbilityUI/ability_dragging_state.gd" id="6_3vy14"]
[ext_resource type="Script" uid="uid://bratox4jig5wo" path="res://Scenes/AbilityUI/ability_released_state.gd" id="7_mw30w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc6sc"]
size = Vector2(32, 32)

[node name="AbilitySlot" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -608.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_63x3o")

[node name="Color" type="ColorRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="State" type="Label" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7xwvf")
text = "State"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_qc6sc")

[node name="AbilityStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_7xwvf")
initial_state = NodePath("AbilityBaseState")

[node name="AbilityBaseState" type="Node" parent="AbilityStateMachine"]
script = ExtResource("4_f4uar")

[node name="AbilityClickedState" type="Node" parent="AbilityStateMachine"]
script = ExtResource("5_othpb")
state = 1

[node name="AbilityDraggingState" type="Node" parent="AbilityStateMachine"]
script = ExtResource("6_3vy14")
state = 2

[node name="AbilityReleasedState" type="Node" parent="AbilityStateMachine"]
script = ExtResource("7_mw30w")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
